--- a/nexus/templates/nexus/base.html
+++ b/nexus/templates/nexus/base.html
@@ -87,7 +87,7 @@
 
         <div id="footer">
             <div class="wrapper">
-                Nexus {% nexus_version %} | Powered by Django magic | Conjured up by the <a href="http://engineering.disqus.com">DISQUS</a> team, forked by <a href="https://github.com/YPlan/nexus">YPlan</a>, and contributed to by other <a href="https://github.com/YPlan/nexus/contributors">noble sorcerers</a>.
+                Nexus {% nexus_version %} | Powered by Django magic | Conjured up by the <a href="http://engineering.disqus.com">DISQUS</a> team, forked by <a href="https://github.com/adamchainz/nexus">YPlan</a>, and contributed to by other <a href="https://github.com/adamchainz/nexus/contributors">noble sorcerers</a>.
             </div>
         </div>
     </body>
